[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/mobs/sprites/pixil-frame-0 (8).png" type="Texture" id=1]
[ext_resource path="res://objects/mobs/sprites/pixil-frame-0 (9).png" type="Texture" id=2]
[ext_resource path="res://objects/mobs/mob.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.75, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20.5, 18 )

[node name="mob" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="sprite_m" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 23 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -33.25, 5 )
shape = SubResource( 3 )

[node name="move_timer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0.5, 5 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
